--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,5 @@ jobs:
           python-version: 3.x
       - run: pip install mkdocs-material
       - run: pip install -r requirements.txt
+      - run: pip install --upgrade pip
       - run: mkdocs serve 
